--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,66 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-526.5KB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-255.0KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-228.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 台湾-1.44MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-764.1KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in05.dns2333.xyz}}
+  - {name: 🇨🇳 中国-351.6KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in05.dns2333.xyz}}
+  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-567.2KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,9 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-526.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
