--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-567.2KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-352.4KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-628.7KB/s(Youtube:不良林), server: iepl7.dcnode.me, port: 10037, type: ss, cipher: aes-128-gcm, password: d307b05c-2341-4ffa-b376-9d3a46cf7ac9}
+  - {name: 🇨🇳 中国-485.6KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45394, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-373.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45194, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-10.20MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 99ee69d6-e018-432d-ab85-bf95f67776a5}
+  - {name: 🇨🇳 中国-8.98MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45184, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-16.72MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45250, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45394, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-10.68MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45239, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
+  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-628.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
