--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-360.7KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.69MB/s(Youtube:不良林), server: gz.bgp.rx.naiun.pw, port: 45184, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.naiun.pw}}
-  - {name: 🇨🇳 中国-16.72MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45250, type: vmess, uuid: 99ee69d6-e018-432d-ab85-bf95f67776a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hz.bgp.rx.naiun.pw}}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in05.dns2333.xyz}}
-  - {name: 🇬🇧 英国-781.4KB/s(Youtube:不良林), server: 167.172.56.225, port: 54141, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-872.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-6.31MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 99ee69d6-e018-432d-ab85-bf95f67776a5}
   - {name: 🇨🇳 中国-331.8KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-369.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇰🇷 韩国-371.1KB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇨🇳 台湾-7.55MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-957.2KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63041, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-856.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-360.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-781.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-371.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
