--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-872.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-6.31MB/s(Youtube:不良林), server: hz.bgp.rx.naiun.pw, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 99ee69d6-e018-432d-ab85-bf95f67776a5}
-  - {name: 🇨🇳 中国-331.8KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 台湾-7.55MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-957.2KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63041, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in01.dns2333.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-856.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-11.02MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-282.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇭🇰 香港-16.95MB/s(Youtube:不良林), server: hkbn.henyo.us, port: 44614, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: hkbn.henyo.us, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.41MB/s(Youtube:不良林), server: 5.183.179.139, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇩🇪 德国-3.74MB/s(Youtube:不良林), server: 5.183.179.139, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇨🇳 中国-386.7KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-872.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-957.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
